--- a/pom.xml
+++ b/pom.xml
@@ -25,9 +25,10 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.projectlombok</groupId>
-			<artifactId>lombok</artifactId>
-			<version>0.9.2</version>
+		   <groupId>org.projectlombok</groupId>
+		   <artifactId>lombok</artifactId>
+		   <version>RELEASE</version>
+		   <scope>provided</scope>
 		</dependency>
 	</dependencies>
 	<repositories>
